fixes #743, fixes #580, and fixes z-index issue with BrowseEverything file selection modal
WIP - adds dropdown for pending files

fixes #743, fixes #580, and fixes z-index issue with BrowseEverything file selection modal

--- a/app/assets/stylesheets/components/browse_everything.scss
+++ b/app/assets/stylesheets/components/browse_everything.scss
@@ -18,6 +18,7 @@
   top: 10%;
   background-color: initial;
   width: 75%;
+  z-index: 10001;
 
   div {
     background-color: white;
